# NLOC

./: index.html  package-lock.json  package.json  tsconfig.json
mobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/src/: crypto.ts  network.ts
src/: App.tsx
src-tauri/: Cargo.toml  check_err.json  check_err.txt  check_err2.json  output.txt  output_utf8.txt  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  network.rs
src-tauri/src/crypto/: mod.rs
