[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
vsss-rs = "5.2.0"
rand = "0.8"
hex = "0.4"
keyring = "3.6.3"
machine-uid = "0.5.4"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.49.0", features = ["full"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
local-ip-address = "0.6.10"
uuid = { version = "1.20.0", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
